Fix ClickHouse metadata discovery and compression